# gensio

./: .editorconfig  .gitignore  BUILDING.rst  CMakeLists.txt  CONTRIBUTING.rst  COPYING.BSD  ChangeLog  FAQ.rst  FSK-SOAPY.rst  ISSUES  Makefile.am  README.md  README.rst  RELEASE_PROCESS.rst  SECURITY.md  TODO  USING.rst  buffer.c  config.h.cmake  configure.ac  gensio.5  gensio.c  gensio.iss  gensio_acc_gensio.c  gensio_base.c  gensio_filter_ssl.c  gensio_filter_ssl.h  gensio_filter_telnet.c  gensio_ll_fd.c  gensio_ll_gensio.c  gensio_ll_ipmisol.c  gensio_sctp.c  gensio_selector.c  gensio_ssl.c  gensio_stdio.c  gensio_tcp.c  gensio_udp.c  macos-entitle  meson.build  meson_options.txt  (+12 more)
c++/: CMakeLists.txt  Makefile.am  README.rst  gensio.cc  meson.build
c++/examples/: .gitignore  CMakeLists.txt  Makefile.am  mdns.cc  meson.build  telnet_client.cc  telnet_server.cc
c++/include/: Makefile.am
c++/include/gensio/: CMakeLists.txt  Makefile.am  gensio  gensio_classes  gensio_dllvisibility  gensiomdns  gensioosh  gensioosh_dllvisibility  meson.build
c++/lib/: CMakeLists.txt  Makefile.am  gensio.cc  gensiomdns.cc  gensioosh.cc  libgensiocpp.pc.in  libgensiomdnscpp.pc.in  libgensiooshcpp.pc.in  meson.build
c++/swig/: Makefile.am  gensio.swig
c++/swig/go/: Makefile.am  README.rst
c++/swig/go/examples/: Makefile.am  srcexample.go  srctelnet_client.go  srctelnet_server.go
c++/swig/go/gensio/: Makefile.am  gensio.srcswigcxx  gensio.swigcxx  gensioapi.srcgo  go.srcmod  rawgensio.i  srcgensioapi.go
c++/swig/go/tests/: Makefile.am  runtest.in  srctest_ax25.go  srctest_basic.go  srctest_crypto.go  srctest_mdns.go  srctest_netifs.go  srctest_serial.go
c++/swig/include/: Makefile.am  gensio_base.i
c++/swig/pygensio/: CMakeLists.txt  Makefile.am  README.rst  pygensio.i
c++/swig/pygensio/tests/: Makefile.am  runtest.in  test_ax25.py  test_basic.py  test_crypto.py  test_mdns.py  test_serial.py  testbase.py
c++/swig/python/: CMakeLists.txt  Makefile.am  gensio_langinfo.i  gensio_python.h
c++/tests/: CMakeLists.txt  Makefile.am  basic_cpp_test.cc  meson.build  serial_test.cc
checks/: README.rst  (+2 more)
examples/: .gitignore  CMakeLists.txt  Makefile.am  basic_client.c  basic_client.py  basic_server.c  basic_server.py  basic_server_sync.c  basic_server_sync_fork.c  poll_and_gensio.c  sound.c  use_iods.c
glib/: CMakeLists.txt  Makefile.am  gensio_glib.c  gensio_glib_funcs_alloc.3  libgensioglib.pc.in  meson.build
glib/c++/: CMakeLists.txt  Makefile.am
glib/c++/include/: CMakeLists.txt
glib/c++/include/gensio/: CMakeLists.txt  Makefile.am  gensioglib
glib/c++/swig/: Makefile.am
glib/c++/swig/pygensio/: .gitignore  CMakeLists.txt  Makefile.am  README.rst  pygensioglib.i
glib/c++/tests/: CMakeLists.txt  Makefile.am  basic_glib_test.cc
glib/include/: Makefile.am
glib/include/gensio/: CMakeLists.txt  Makefile.am  gensio_glib.h  gensio_glib_dllvisibility.h  meson.build
glib/swig/: Makefile.am  gensioglib.i
glib/swig/python/: .gitignore  CMakeLists.txt  Makefile.am
lib/: .gitignore  AXFEC.md  CMakeLists.txt  IIR_Filter.txt  Makefile.am  README.rst  acc.c  acc_gensio.c  alsa_sound.h  avahi_watcher.c  avahi_watcher.h  buffer.c  buffer.h  circbuf.c  convcode.c  convcode.h  crc.h  crc16.c  crc16.h  errtrig.c  errtrig.h  file_sound.h  filters.h  freqsynth.h  gensio.c  gensio_acc.c  gensio_acc_gensio.c  gensio_addr.c  gensio_addrinfo.c  gensio_addrinfo.h  gensio_afskmdm.c  gensio_ax25.c  gensio_ax25_addr.c  gensio_ax25_addr.h  gensio_axfec.c  gensio_base.c  gensio_base_parms.h  gensio_certauth.c  gensio_chardelay.c  gensio_circbuf.c  (+112 more)
man/: CMakeLists.txt  Makefile.am  gensio.5  gensio_acc_accept_s.3  gensio_acc_control.3  gensio_acc_get_type.3  gensio_acc_set_accept_callback_enable.3  gensio_acc_set_callback.3  gensio_acc_shutdown.3  gensio_acc_startup.3  gensio_acc_str_to_gensio.3  gensio_accepter_event.3  gensio_add_default.3  gensio_alloc_channel.3  gensio_atomics.3  gensio_bswap.3  gensio_close.3  gensio_control.3  gensio_err.3  gensio_event.3  gensio_get_raddr.3  gensio_get_type.3  gensio_mdns.3  gensio_open.3  gensio_open_channel.3  gensio_os_funcs.3  gensio_raddr_to_str.3  gensio_refcount.3  gensio_set_callback.3  gensio_set_log_mask.3  gensio_set_read_callback_enable.3  gensio_set_sync.3  gensio_to_sergensio.3  gensio_write.3  meson.build  sergensio.5  sergensio_b_alloc.3  sergensio_baud.3  sergensio_event.3  str_to_gensio.3  (+1 more)
tcl/: CMakeLists.txt  Makefile.am  gensio_tcl.c  gensio_tcl_funcs_alloc.3  libgensiotcl.pc.in  meson.build
tcl/c++/: Makefile.am
tcl/c++/include/: Makefile.am
tcl/c++/include/gensio/: CMakeLists.txt  Makefile.am  gensiotcl
tcl/c++/swig/: CMakeLists.txt  Makefile.am
tcl/c++/tests/: CMakeLists.txt  Makefile.am  basic_tcl_test.cc
tcl/include/gensio/: CMakeLists.txt  Makefile.am  gensio_tcl.h  gensio_tcl_dllvisibility.h
tcl/swig/: Makefile.am  gensiotcl.i
tcl/swig/python/: CMakeLists.txt  Makefile.am
tests/: .gitignore  CMakeLists.txt  Makefile.am  README  clientcert.pem  clientkey.pem  echotest.c  gensios_enabled.py.in  ipmisimdaemon.py  make_keys  oomtest.c  oomtest0  oomtest1  oomtest10  oomtest11  oomtest12  oomtest13  oomtest14  oomtest15  oomtest2  oomtest3  oomtest4  oomtest5  oomtest6  oomtest7  oomtest8  oomtest9  reflector.py  reflector.py.in  remote_termios.c  remote_termios.h  remote_termios.i  runtest.in  sertest.c  termioschk.py  test_accept_certauth_tcp.py  test_accept_mux_sctp.py  test_accept_mux_tcp.py  test_accept_sctp.py  test_accept_ssl_tcp.py  (+62 more)
tools/: .gitignore  CMakeLists.txt  Makefile.am  file_utils.c  gagwpe.1  gensio_pty_helper.c  gensio_sound.c  gensioagwpe.c  gensiomdns.c  gensiosound.c  gensiot.1  gensiot.c  gensiotool.1  gensiotool.c  gmdns.1  greflector.1  gsound.1  gtlssh-keygen.1  gtlssh-keygen.c  gtlssh-keygen.in  gtlssh-shared.c  gtlssh.1  gtlssh.c  gtlssh.h  gtlsshd-cert.pam  gtlsshd.8  gtlsshd.c  gtlsshd.pam  gtlsshd.service  gtlsshd.service.in  gtlssync  gtlssync.1  ioinfo.c  ioinfo.h  localports.c  localports.h  meson.build  openssl_compat.h  pam_2factor_dummy.c  run_get_output.c  (+4 more)
(+106 files in other folders)
